rust/crates/astra-cli/src/tui/slash_menu/snapshots/astra__tui__slash_menu__popup__tests__slash_popup_narrow_28.snap
---
source: crates/astra-cli/src/tui/slash_menu/popup.rs
expression: "render_menu(&menu, 28, 3)"
---
▌ /help     show help
  /history  browse session …
  /model    pick a model
