rust/crates/astra-cli/src/tui/slash_menu/snapshots/astra__tui__slash_menu__popup__tests__slash_popup_no_matches_80.snap
---
source: crates/astra-cli/src/tui/slash_menu/popup.rs
assertion_line: 379
expression: "render_menu(&menu, 80, 3)"
---
  no matching commands — try a shorter prefix
