rust/crates/astra-cli/src/tui/slash_menu/snapshots/astra__tui__slash_menu__popup__tests__slash_popup_second_selected_80.snap
---
source: crates/astra-cli/src/tui/slash_menu/popup.rs
expression: "render_menu(&menu, 80, 3)"
---
  /help     show help
▌ /history  browse session history
  /model    pick a model
